--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "prisma": {
-      "version": "^5.0.0",
-      "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-    },
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1"
   }
 }
