--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
+    "browser-cookies": "^1.2.0",
     "next": "13.4.9",
     "next-auth": "^0.0.0-pr.6777.c5550344",
     "postcss": "8.4.25",
