--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.0",
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -17,7 +17,7 @@
     "bcryptjs": "^2.4.3",
     "browser-cookies": "^1.2.0",
     "next": "13.4.9",
-    "next-auth": "^0.0.0-pr.6777.c5550344",
+    "next-auth": "^4.22.4",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "prisma": "^5.1.0",
+    "prisma": "^5.1.1",
     "ts-node": "^10.9.1"
   }
 }
