--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -30,5 +30,8 @@
     "@types/bcryptjs": "^2.4.2",
     "prisma": "^5.1.1",
     "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed":"ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
