--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ NEXTAUTH_SECRET=123456789
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres@localhost:5432/postgres?schema=public"
+
+#docker run --rm -p 5432:5432 -e POSTGRES_HOST_AUTH_METHOD=trust postgres
